--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <div class="container">
     <div class="sidebar">
       <div class="profile">
-        <div class="circle">DO-IT</div>
+<div class="circle">
+    <img src="NEC0822020.JPG" alt="Description of the image">
+</div>
         <div class="profile-name">BALE SUNIL KUMAR REDDY</div>
       </div>
       <hr>
