--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
   <div class="container">
     <div class="sidebar">
       <div class="profile">
- <div class="circle">
-        <img src="NEC0822020.JPG" alt="Circular Image">
- </div>
+ <div class="circle">DO-IT</div>
         <div class="profile-name">BALE SUNIL KUMAR REDDY</div>
       </div>
       <hr>
